cabal-version:       >=1.10
name:                dombuilder-pandoc
version:             0.1.0.0
synopsis:            Convert Pandoc documents to reflex-dom DomBuilder actions
description:         Render Pandoc documents in reflex-dom applications as DomBuilder widgets
homepage:            https://github.com/obsidiansystems/dombuilder-pandoc
bug-reports:         https://github.com/obsidiansystems/dombuilder-pandoc/issues
license:             BSD3
license-file:        LICENSE
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
copyright:           Obsidian Systems LLC
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Reflex.Dom.Builder.Pandoc
                       Reflex.Dom.Builder.Pandoc.RawHtml
  build-depends:       base >=4.12 && <4.22
                     , containers >= 0.6 && <0.8
                     , html-parse >= 0.2 && <0.3
                     , pandoc-types >= 1.23 && <1.24
                     , reflex-dom-core >= 0.7 && < 0.9
                     , text >= 1.2 && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall
